Updating titles and tracking info

--- a/deadlypenguin/code/irclog/index.html
+++ b/deadlypenguin/code/irclog/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>IRC Logs</title>
+	<title>IRC Logs &raquo; Deadlypenguin</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="irclog.css" />
