--- a/deadlypenguin/code/karma/index.html
+++ b/deadlypenguin/code/karma/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>IRC Karma</title>
+	<title>IRC Karma &raquo; Deadlypenguin</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
 	<link rel="stylesheet" href="/s/bootstrap-datepicker.css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
