--- a/deadlypenguin/code/quotes/index.html
+++ b/deadlypenguin/code/quotes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>IRC Quotes</title>
+		<title>IRC Quotes &raquo; Deadlypenguin</title>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
