--- a/deadlypenguin/gallery.html
+++ b/deadlypenguin/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head> 
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Deadlypenguin - Gallery</title>
+		<title>Gallery &raquo; Deadlypenguin</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
