--- a/deadlypenguin/photography.html
+++ b/deadlypenguin/photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Deadlypenguin - Photography</title>
+		<title>Photography &raquo; Deadlypenguin</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
