--- a/deadlypenguin/code/karma/index.html
+++ b/deadlypenguin/code/karma/index.html
@@ -2,60 +2,75 @@
 <html lang="en">
 <head>
 	<title>IRC Karma &raquo; Deadlypenguin</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/s/bootstrap-datepicker.css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="karma.css" />
 
 	<script id="new-nick-template" type="text/x-handlebars-template">
-		<input type="text" class="input-small" id="new-nick-input" name="new-nick-input" placeholder="nick" autocomplete="off">
-		<a onclick="selectedNick();"><i class="icon-plus-sign-alt"></i></a>
+		<div class="input-group">
+			<input type="text" class="form-control" id="new-nick-input" name="new-nick-input" placeholder="nick" autocomplete="off" style="min-width: 100px;">
+			<span class="input-group-addon"><a onclick="selectedNick();"><i class="icon-plus-sign-alt"></i></a></span>
+		</div>
 	</script>
 	<script id="error-template" type="text/x-handlebars-template">
 		<div class="text-center alert alert-error"><i class="icon-ban-circle icon-large"></i> Failed to load karma.</div>
 	</script>
+	<script id="leaderboard-template" type="text/x-handlebars-template">
+		<li class="list-group-item"><div class="rank">{{ rank }}</div><span class="badge">{{ karma }}</span>{{ nick }}</li>
+	</script>
 </head>
 <body>
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span6 offset3 text-center">
-				<h1 id="log-title">IRC Karma</h1>
+	<div class="container">
+		<h1 id="log-title">IRC Karma</h1>
+		<div class="row">
+			<div class="col-md-3">
+				<h2>Leaderboard <a href="#" id="leaderboard_link"><sup><small><i class="glyphicon glyphicon-link"></i></small></sup></a></h2>
+				<ol class="list-group" id="leaderboard">
+					<li style="list-style-type: none"><i class="icon-spinner icon-spin"></i> Loading</li>
+				</ol>
+			</div>
+			<div class="col-md-9 text-center">
 				<div class="alert alert-info">Karma updated nightly</div>
-				<form class="form-inline">
-					<div class="input-append">
-						<input type="text" class="input-medium" id="nick" name="nick" placeholder="nick" disabled>
-						<span class="add-on">
-							<a id="new-nick" onclick="addNick()"><i class="icon-plus-sign"></i></a>
-						</span>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="input-group">
+							<input type="text" class="form-control input-medium" id="nick" name="nick" placeholder="nick" disabled>
+							<span class="input-group-addon">
+								<a id="new-nick" onclick="addNick()"><i class="icon-plus-sign"></i></a>
+							</span>
+						</div>
 					</div>
-					from
-					<div class="input-append">
-						<input type="text" class="input-small" id="from" name="from" placeholder="2012-10-26">
-						<span class="add-on">
-							<i class="icon-calendar" id="from-calendar"></i>
-						</span>
+					<div class="col-md-4">
+						<div class="input-group">
+							<input type="text" class="form-control input-small" id="from" name="from" placeholder="2012-10-26">
+							<span class="input-group-addon">
+								<i class="icon-calendar" id="from-calendar"></i>
+							</span>
+						</div>
 					</div>
-					to
-					<div class="input-append">
-						<input type="text" class="input-small" id="to" name="to" placeholder="2012-12-30">
-						<span class="add-on">
-							<i class="icon-calendar" id="to-calendar"></i>
-						</span>
+					<div class="col-md-4">
+						<div class="input-group">
+							<input type="text" class="form-control input-small" id="to" name="to" placeholder="2012-12-30">
+							<span class="input-group-addon">
+								<i class="icon-calendar" id="to-calendar"></i>
+							</span>
+						</div>
 					</div>
-				</form>
+				</div>
+				<div id="chart_div" style="height: 500px;">
+					<p class="text-center" style="margin-top: 30px;"><i class="icon-spinner icon-spin icon-large"></i> Loading</p>
+				</div>
 			</div>
 		</div>
-		<div class="row-fluid">
-			<div class="span12">
-				<div id="chart_div" style="width: 900px; height: 500px;">
-					<p class="text-center"><i class="icon-spinner icon-spin icon-large"></i> Loading</p>
-				</div>
+		<div class="row">
+			<div class="col-md-12">
 			</div>
 		</div>
 	</div>
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-	<script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/j/bootstrap-datepicker.js"></script>
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript" src="/j/handlebars.js"></script>
