Adding new designs

--- a/deadlypenguin/design.html
+++ b/deadlypenguin/design.html
@@ -97,6 +97,25 @@
 			<hr>
 			<div class="row">
 				<div class="span2">
+					<a href="http://noeticpenguin.github.io/Motion1/"><img src="/img/thumbnails/motion1.png" alt="motion1" class="img-polaroid media-object pull-left"></a>
+				</div>
+				<div class="span4">
+					<h1 id="motion1"><a href="http://noeticpenguin.github.io/Motion1/">Motion1</a></h1>
+					<p><a href="http://noeticpenguin.github.io/Motion1/">Motion1</a> is a Salesforce1 interface for mac. I designed the logo for this project and provided several formats for both web and desktop use.</p>
+					<br class="clearboth">
+				</div>
+				<div class="span2">
+					<a href="http://noeticpenguin.github.io/ngForce/"><img src="/img/thumbnails/ngforce.png" alt="ngForce" class="img-polaroid media-object pull-left"></a>
+				</div>
+				<div class="span4">
+					<h1 id="ngforce"><a href="http://noeticpenguin.github.io/ngForce/">ngForce</a></h1>
+					<p><a href="http://noeticpenguin.github.io/ngForce/">ngForce</a> is a set fo Angluar.js modules for Force.com development.  I designed their logo and provided several different formats for web use.</p>
+					<br class="clearboth">
+				</div>
+			</div>
+			<br>
+			<div class="row">
+				<div class="span2">
 					<a href="#signalfest-modal" role="button" data-toggle="modal"><img src="/img/thumbnails/signalfest_thumb.png" alt="" class="img-polaroid media-object pull-left"></a>
 				</div>
 				<div class="span4">
@@ -135,7 +154,7 @@
 				</div>
 				<div class="span4">
 					<h1 id="trianglebeats"><a href="http://trianglebeats.com/">Triangle Beats</a></h1>
-					<p><a href="http://trianglebeats.com/">Trianle Beats</a> is a online community for <abbr title="Electronic Dance Music">EDM</abbr> in the Triangle area.  I designed their logo as well as modified their existing Drupal theme to match the color scheme of the logo</p>
+					<p><a href="http://trianglebeats.com/">Triangle Beats</a> is a online community for <abbr title="Electronic Dance Music">EDM</abbr> in the Triangle area.  I designed their logo as well as modified their existing Drupal theme to match the color scheme of the logo</p>
 					<br class="clearboth">
 				</div>
 			</div>
