--- a/deadlypenguin/photography.html
+++ b/deadlypenguin/photography.html
@@ -110,6 +110,7 @@
 						<li><a href="/places/us/ca/">California</a></li>
 						<li><a href="/places/us/fl/">Florida</a></li>
 						<li><a href="/places/us/ga/">Georgia</a></li>
+						<li><a href="/places/us/hi/">Hawaii</a></li>
 						<li><a href="/places/us/ma/">Massachusetts</a></li>
 						<li><a href="/places/us/mi/">Michigan</a></li>
 						<li><a href="/places/us/ny/">New York</a></li>
