--- a/deadlypenguin/index.html
+++ b/deadlypenguin/index.html
@@ -105,7 +105,7 @@
 			</ul>
 			<hr>
 			<h1 id="contact">Contact</h1>
-			<p>Want to get in touch? Feel free to <a href="mailto:patrick@deadlypenguin.com"><i class="icon-envelope"></i> email me</a> or call me 919.624.0764</p>
+			<p>Want to get in touch? Feel free to <a href="mailto:patrick@deadlypenguin.com"><i class="icon-envelope"></i> email me</a></p>
 			<h3>Rates</h3>
 			<div class="row">
 				<div class="span6">
