Adding new locations

--- a/deadlypenguin/photography.html
+++ b/deadlypenguin/photography.html
@@ -74,6 +74,12 @@
 			<hr>
 			<h1 id="places">Places</h1>
 			<ul class="unstyled span4">
+				<li><h2 id="asia">Asia</h2></li>
+				<li>
+					<ul>
+						<li><a href="/places/japan/">Japan</a></li>
+					</ul>
+				</li>
 				<li><h2 id="canada">Canada</h2></li>
 				<li>
 					<ul>
@@ -85,6 +91,7 @@
 				<li>
 					<ul>
 						<li><a href="/places/bahamas/">Bahamas</a></li>
+						<li><a href="/places/stlucia/">St Lucia</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -108,6 +115,7 @@
 					<ul>
 						<li><a href="/places/us/ak/">Alaska</a></li>
 						<li><a href="/places/us/ca/">California</a></li>
+						<li><a href="/places/us/co/">Colorado</a></li>
 						<li><a href="/places/us/fl/">Florida</a></li>
 						<li><a href="/places/us/ga/">Georgia</a></li>
 						<li><a href="/places/us/hi/">Hawaii</a></li>
